<resources>
    <string name="app_name">WhatsDone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groups">Groups</string>
    <string name="tasks">Tasks</string>
    <string name="settings1">Settings1</string>
    <string name="group1">Group 1</string>
    <string name="group3">Group 3</string>
    <string name="group2">Group 2</string>
    <string name="task1">Task 1</string>
    <string name="task2">Task 2</string>
    <string name="task3">Task 3</string>
    <string name="group_menu_item1">Create new group</string>
    <string name="group_menu_item2">Menu item 2</string>
    <string name="group_menu_item3">Menu item 3</string>
    <string name="text1">text1</string>
    <string name="time">11.00</string>
    <string name="NewActivity">New Activity</string>
    <string name="GroupDetails">Group Details</string>
    <string name="group_name">Group Name</string>
    <string name="CreateGroup">Create Group</string>
    <string name="Discussion">Discussion</string>
    <string name="NewTask">New Task</string>
    <string name="Title">Title</string>
    <string name="Description">Enter Description Here</string>
    <string name="done_image">done image</string>
    <string name="Task_Name">Task Name</string>
    <string name="teamPhoto">Group Photo</string>
    <string name="members">Members</string>
    <string name="AddMembers">Add members</string>
    <string name="settings">SETTINGS</string>
    <string name="discussion">Discussion</string>
    <string name="TaskDetails">My Task 1</string>
    <string name="task_owner">task owner</string>
    <string name="Save">Save</string>
    <string name="todo">Not Started</string>
    <string name="in_progress">In Progress</string>
    <string name="on_hold">On Hold</string>
    <string name="done">Done</string>

    <string name="task_title">Title</string>
    <string name="hint_enter_a_message">Type a message…</string>

    <string-array name="planets">
        <item>@string/todo</item>
        <item>@string/in_progress</item>
        <item>@string/on_hold</item>
        <item>@string/done</item>
    </string-array>

    <string name="Terms_and_Privacy">Tap "Agree and continue" to accept the <font color='#01C6DB'>WhatsDone Terms of Service and Privacy Policy</font> </string>
    <string name="agree_and_continue">AGREE AND CONTINUE</string>
    <string name="next">NEXT</string>
    <string name="nav_cal">Calender</string>
    <string name="nav_search">Search</string>
    <string name="nav_pro">Profile</string>
    <string name="nav_appointment">Appointment</string>
    <string name="select_from_contacts">Select from contacts</string>
    <string name="select_group_name">Select Group Name</string>
    <string name="set_due_date">Set due date</string>
    <string name="checklist">Checklist</string>
    <string name="assigned_to">Assigned to</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="due_date">Due date</string>
    <string name="choose_one_of_the_status">Choose one of the status</string>
    <string name="date">01/01/2019</string>
    <string name="change_profile_hint">Enter your name and add an optional profile picture</string>
    <string name="status">Status</string>
    <string name="account_section">Account</string>
    <string name="notifications_hint">Notifications</string>
    <string name="sync_contacts">Sync Contacts</string>
    <string name="logout">logout</string>
    <string name="display_name">Display Name</string>
    <string name="start_typing_status">Start typing</string>
    <string name="default_notification_channel_id">whats_done_channel</string>
    <string name="enable_user_tasks">Enable user tasks</string>
    <string name="add_new_task">Add Task</string>
    <string name="add_group">Add Group</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="alert">Alert</string>
    <string name="error_task_title">Task title is missing</string>
    <string name="task_overdue">Overdue</string>
    <string name="task_ontrack">On track</string>
    <string name="task_due_soon">Due soon</string>
    <string name="add_task">Add Task</string>
    <string name="create_profile_btn_text">Create Profile</string>
    <string name="group">GROUPS</string>
    <string name="my_tasks">MY TASKS</string>
    <string name="add_new_group">Add Group</string>
    <string name="group_settings">Group Settings</string>
    <string name="team_name">Enter group name here</string>
    <string name="assigned_by">Assigned by</string>
    <string name="add_checklist_items_here">Add New item</string>
    <string name="delete">Delete</string>
    <string name="acknowledged">Acknowledged</string>
    <string name="acknowledge_pending">Pending Acknowledgement</string>
    <string name="activity_log">AcivityLog</string>
    <string name="no_task">No Task here!</string>
    <string name="toggle">Toggle</string>
    <string name="acknowledge_task">Acknowledge Task</string>
    <string name="message_saved_user">Successfully saved the user details.</string>
    <string name="no_user_found">No user here!</string>

</resources>
