<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TasksFragment"

    >


    <TextView
        android:id="@+id/task1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:paddingLeft="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/task1"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp">

    </TextView>


    <TextView
        android:id="@+id/task2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="160dp"
        android:paddingLeft="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/task2"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"

        >

    </TextView>


    <TextView
        android:id="@+id/task3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="240dp"
        android:paddingLeft="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/task3"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        >

    </TextView>


</FrameLayout>