<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/task_inner_recycler_view_layout"
    android:paddingTop="20sp"
    android:paddingBottom="20sp"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:background="@color/white"

    android:layout_weight="20"
    android:layout_centerVertical="true"

    >


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_task_inner_group"
        android:layout_height="80sp"
        android:layout_width="80sp"
        android:src="@drawable/task_owner"
        android:foregroundGravity="center_vertical"
        android:contentDescription="@string/task_owner"
        android:layout_centerVertical="true"
        android:paddingBottom="10sp"

        >
    </de.hdodenhof.circleimageview.CircleImageView>


    <TextView
        android:id="@+id/task_inner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"

        android:layout_alignTop="@+id/image_view_task_inner_group"
        android:layout_marginStart="100dp"
        android:textColor="@color/black"
        android:textSize="20sp"


        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="225dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="100dp" />

    <TextView
        android:id="@+id/task_inner_text_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_view_task_inner_group"

        android:layout_alignParentStart="true"

        android:layout_marginStart="100dp"
        android:paddingBottom="10sp"
        android:text="@string/text1"
        android:textColor="#444"
        android:textSize="15sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="100dp" />

    <TextView
        android:id="@+id/task_inner_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/time"
        android:textSize="15sp"
        android:paddingRight="20sp"
        android:paddingEnd="20sp"
        >

    </TextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/task_inner_text_sub"
        android:background="@color/grey"
        android:paddingBottom="10sp"
        android:paddingTop="20sp"
        />



</RelativeLayout>