<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"

    android:layout_alignParentBottom="true"
    android:background="@color/background"
    android:tag=""

    >


    <TextView
        android:id="@+id/group_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/GroupDetails"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_details">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/group_photo_image_view2"
            android:layout_width="44dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.893"
            app:layout_constraintStart_toEndOf="@+id/teamPhoto_text_view2"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/teamPhoto_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="10sp"
            android:text="@string/teamPhoto"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/members"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/group_name_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:text="@string/group_name"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <EditText
            android:id="@+id/change_group_name_edit_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:hint="@string/group_name"
            android:inputType="text"
            android:paddingTop="10sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/members2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:paddingTop="5sp"
        android:text="@string/members"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/members2"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/edit_members_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:text="@string/AddMembers"
            android:textColor="@color/bluelight"

            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/add_members_list_view2"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <ListView
            android:id="@+id/add_members_list_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_members_button"
            app:layout_constraintVertical_bias="1.0">

        </ListView>

    </android.support.constraint.ConstraintLayout>

    <!--
    <Button
        android:id="@+id/save_group_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:text="@string/Save"
        android:textColor="@color/bluelight"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        />

    -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/update_group_fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"

        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"

        android:layout_marginBottom="36dp"
        android:background="@color/fab_color"
        android:backgroundTint="@color/fab_color"
        android:src="@drawable/ic_check"
        app:backgroundTint="@color/fab_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/fab_color"


        />
</android.support.constraint.ConstraintLayout>
